--- a/app/community/community.module.scss
+++ b/app/community/community.module.scss
@@ -49,9 +49,8 @@
 	}
 	&:hover > .icon {
 		@include mixins.desktop {
-			background-color: #333;
-			width: 60%;
-			box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.616);
+			background-color: var(--bg-color);
+			border-right: 10px solid var(--btn-color);
 		}
 	}
 }
@@ -70,6 +69,7 @@
 	justify-content: center;
 	border-radius: 10px 0 0 10px;
 	transition: 300ms;
+	border-right: 10px solid var(--btn-2-color);
 }
 
 .stats {
